<resources>
    <string name="app_name">Water Fly Vendor</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="network_failure">Network Failure! Please try after sometime.</string>
    <string name="conversion_error">Conversion Error</string>
    <string name="water_fly">Water Fly</string>
    <string name="please_enter_your_mobile_number">Please Enter your mobile number</string>
    <string name="mobile_no">Mobile No</string>
    <string name="next">Next</string>
    <string name="enter_valid_mobile_no">Enter valid mobile no</string>
    <string name="key_mobile">key_mobile</string>
    <string name="please_enter_otp">Please enter OTP sent to your mobile No</string>
    <string name="validate">Validate OTP</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_correct_otp">Please enter correct OTP</string>
    <string name="please_enter_details">Please Enter Details</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="plant_name">Delivery Area</string>
    <string name="plant_phone">Plant Phone</string>
    <string name="plant_address">Plant Address</string>
    <string name="add_details">Add Details</string>
    <string name="enter_valid_vendor_name">Enter valid vendor name</string>
    <string name="enter_valid_plant_name">Enter valid plant name</string>
    <string name="enter_valid_address">Enter valid address</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="address">Address</string>
    <string name="pincode">Pincode</string>
    <string name="enter_valid_area_pincode">Enter Valid Area Pincode</string>
    <string name="servicedesc">LocationService</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
         AIzaSyBulyTj2UyG7tnyG_5xf4DGk70o08hEC1c
    </string>
    <string name="downloadText">Download the Vendor App from</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_ready_for_service_msg">Are you ready for delivery ?\n User will connect with you. </string>
    <string name="you_will_be_offline_and_user_will_not_be_able_to_connect_you">You will be offline and user will not be able to connect you.</string>
    <string name="dlg_bg_permission_title">Background location permission</string>
    <string name="dlg_bg_permission_msg">Allow location permission to get location updates in background</string>
    <string name="dlg_bg_permission_positive_btn">Allow</string>
    <string name="bg_notif_message">Your location is shared  to users.</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="download_waterfly"><u><b>Download WaterFly App</b></u></string>
    <string name="dummy_content">This App is only for Water Supplier or Vendor.\n\nPlease Download WaterFly App from link below.</string>
    <string name="skip">Skip</string>

    <!--<string name="google_maps_key">AIzaSyDVDloatevH6ZB2dNqorDljbt1rGlDVpoQ</string>-->
    <!--<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyD6Uz6ARw0-7DEULuudZOYddm7lGT8gePM</string>-->
</resources>