<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/_16sdp"
    tools:context="com.waterfly.vendor.ui.EnterMobileActivity">

    <TextView
        android:id="@+id/tvAccessToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/water_fly"
        android:textSize="@dimen/_12sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_your_mobile_number"
        android:textSize="@dimen/_12sdp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:hint="@string/mobile_no"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_mobile_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="10"
            android:enabled="true"
            android:singleLine="true"
            android:text=""/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilOTP"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:hint="@string/mobile_no"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEnterOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="6"
            android:singleLine="true"
            android:text=""/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSendOTP"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/send_otp"
        android:onClick="onSendOTPClick"
        android:layout_marginTop="@dimen/_8sdp"/>

    <com.google.android.material.button.MaterialButton
        android:visibility="gone"
        android:id="@+id/btnValidateOTP"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/validate"
        android:onClick="onValidateClick"
        android:layout_marginTop="@dimen/_8sdp"/>


    <ProgressBar
        android:id="@+id/progress"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
</LinearLayout>