<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.WaterFlyVendor.FullscreenContainer"
    tools:context=".ui.SplashActivity">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtDownloadApp"
        android:keepScreenOn="true"
        android:padding="@dimen/_20sdp"
        android:text="@string/dummy_content"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtDownloadApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="@dimen/_20sdp"
        android:autoLink="web"
        android:layout_marginEnd="@dimen/_10dp"
        android:text="@string/download_waterfly" />

    <TextView
        android:id="@+id/txtSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/_20sdp"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold"
        android:text="@string/skip"
        android:textColor="@color/white" />

</RelativeLayout>


